--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,8 @@ project(diff_RS_SfM)
 add_definitions(-DCERES_GFLAGS_NAMESPACE=${GFLAGS_NAMESPACE})
 find_package(Ceres REQUIRED)
 find_package(Eigen3 REQUIRED)
-find_package(OpenCV REQUIRED)
+# find_package(OpenCV REQUIRED)
+find_package(OpenCV 3.4 REQUIRED PATHS /usr/local)
 find_package(Boost COMPONENTS system thread filesystem REQUIRED REQUIRED)
 
 include_directories(${CERES_INCLUDE_DIRS})
@@ -15,10 +16,13 @@ include_directories(${OpenCV_INLCUDE_DIRS})
 include_directories(${EIGEN3_INCLUDE_DIR})
 include_directories(${Boost_INCLUDE_DIR})
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+message(${OpenCV_LIBS})
 
-add_executable(diff_RS_SfM main.cc camera.cc camera.h rsframe.cc rsframe.h scanline.cc scanline.h
-        nonlinearRefinement.cc nonlinearRefinement.h minimal.cc minimal.h errorMeasure.cpp errorMeasure.h)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set (CMAKE_VERBOSE_MAKEFILE true)
+
+add_executable(diff_RS_SfM CustomDeepFlow.cc CustomDeepFlow.hpp main.cc camera.cc camera.h rsframe.cc rsframe.h scanline.cc scanline.h
+        nonlinearRefinement.cc nonlinearRefinement.h minimal.cc minimal.h errorMeasure.cpp errorMeasure.h deepflow.cpp)
 target_link_libraries(diff_RS_SfM ${CERES_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
 
